--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
     </ul>
   </div>
   <div class="whoiam-image">
-    <img src="ressources/meAgain.png" alt="Profile picture">
+    <img src="ressources/meagain.png" alt="Profile picture">
   </div>
 </section>
 
@@ -68,7 +68,7 @@
     <p>Since every game I make rewards you for replaying and finding everything in a level.</p>
   </div>
   <div class="style-image">
-    <img src="ressources/Artstyle.jpg" alt="Art Style Example">
+    <img src="ressources/ArtStyle.jpg" alt="Art Style Example">
   </div>
 </section>
 
