--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
       <div class="link-icons">
         <div class="link-item">
           <i class="fas fa-envelope"></i>
-          <img src="ressources/Mail.png" alt="eMail" style="max-width:30px;">
+          <img src="ressources/mail.png" alt="eMail" style="max-width:30px;">
           <p>thibault.vandresse@gmail.com</p>
         </div>
         <div class="link-item">
