--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,7 @@
       You have 3 minutes to get as much score as possible! Be fast, be funny and don't hold back on the pain!<br><br>
       Also, dying isn't part of the fun, so if you could not, that would be better for your health.
     </p>
-    <a href="#" class="project-btn">See more</a>
+    <a href="https://max2002xam.itch.io/no-pain-no-game" class="project-btn">See more</a>
   </div>
   <div class="project-media">
     <img src="ressources/NoPainNoGameIcon.png" alt="Project Three">
