Corrected Spelling error in  De Leie Quest desc

--- a/project-DeLeieQuest.html
+++ b/project-DeLeieQuest.html
@@ -26,7 +26,7 @@
       <p class="platform">Platform: 📱</p>
 
       <p>
-        De Leie quest is a game that was made as a proof of consept for a client, it aims to distract children and make them learn about Kortrijk while having fun<br><br>
+        De Leie quest is a game that was made as a proof of concept for a client, it aims to distract children and make them learn about Kortrijk while having fun<br><br>
         The game aims to be a collection of games based on the location of the user, following their position on the GPS, like how pokemon go would work.
         The Proof of concept has only one polished game, as well as cutscenes and more, but more minigames have been iterated and could be added in a full version<br><br>
         Winning or collecting points will unlock cosmetic decorations for the player. 
